--- a/srvs/user_srv/config-pro.yaml
+++ b/srvs/user_srv/config-pro.yaml
@@ -1,6 +1,11 @@
+name: 'user-srv'
 mysql:
   host: "127.0.0.1"
   port: 3306
   user: 'root'
   password: '123456'
   db: 'ecs_user_srv'
+
+consul:
+  host: '127.0.0.1'
+  port: 8500
