--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,10 @@ updates:
   - package-ecosystem: "gomod"
     directory: "/apis"
     labels:
-      - "Dependencies"
+      - "dependencies"
     schedule:
       interval: "daily"
+    ignore:
+      - dependency-name: "hertz"
+      - dependency-name: "lodash"
+      - dependency-name: "aws-sdk"
