--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,5 +8,5 @@ updates:
       interval: "daily"
     ignore:
       - dependency-name: "hertz"
-      - dependency-name: "lodash"
-      - dependency-name: "aws-sdk"
+      - dependency-name: "zap"
+      - dependency-name: "grpc"
