--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,4 @@ updates:
     ignore:
       - dependency-name: "github.com/cloudwego/hertz"
       - dependency-name: "go.uber.org/zap"
+      - dependency-name: "google.golang.org/grpc"
