--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,5 @@ updates:
       - "dependencies"
     schedule:
       interval: "daily"
-    ignore:
-      - dependency-name: "github.com/cloudwego/hertz"
-      - dependency-name: "go.uber.org/zap"
+    allow:
+      - dependency-name: "github.com/spf13/viper"
