--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,5 +6,9 @@ updates:
       - "dependencies"
     schedule:
       interval: "daily"
+    ignore:
+      - dependency-name: "github.com/go-redis/redis/v8"
+        versions: [ "8.x" ]
     allow:
       - dependency-name: "github.com/spf13/viper"
+      - dependency-name: "github.com/go-redis/redis/v8"
