--- a/apis/user-web/config.yaml
+++ b/apis/user-web/config.yaml
@@ -1,19 +1,7 @@
-name: 'user-web'
-port: 8021
-
-user_srv:
-  host: '10.20.244.204'
-  port: 50051
-  name: 'user-srv'
-
-jwt:
-  key: 'km!RU#a*43BsTsBVLQPpmuXI&$BJD%Sz'
-
-redis:
-  host: '127.0.0.1'
-  port: 6379
-  expire: 300
-
-consul:
-  host: 127.0.0.1
-  port: 8500
+host: '127.0.0.1'
+port: 8848
+namespace: 'ea9265b9-2c39-4b53-8ad8-5da4adbc2174'
+user: 'nacos'
+password: 'nacos'
+dataid: 'user-web'
+group: 'DEFAULT_GROUP'
