--- a/srvs/order_srv/config.yaml
+++ b/srvs/order_srv/config.yaml
@@ -1,7 +1,7 @@
 host: '127.0.0.1'
 port: 8848
-namespace: 'dfdc7f37-3277-4ec4-8154-4e34d8361faf'
+namespace: 'b6b8052d-0177-4cf5-b627-98e00f347e04'
 user: 'nacos'
 password: 'nacos'
-dataid: 'inventory-srv'
+dataid: 'order-srv'
 group: 'DEFAULT_GROUP'
