--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ on: [ push, pull_request ]
 
 jobs:
   lint-and-ut:
-    runs-on: [ self-hosted, X64 ]
+    runs-on: [ubuntu-16.04]
     steps:
       - uses: actions/checkout@v3
 
