--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,10 @@
 name: Tests
 
-on: [ push, pull_request ]
+on: [ pull_request ]
 
 jobs:
   lint-and-ut:
-    runs-on: [ubuntu-18.04]
+    runs-on: [ ubuntu-18.04 ]
     steps:
       - uses: actions/checkout@v3
 
@@ -13,8 +13,8 @@ jobs:
         with:
           go-version: 1.18
 
-      - name: Lint
-        run: |
-          go vet -stdmethods=false $(go list ./...)
-          go install mvdan.cc/gofumpt@v0.2.0
-          test -z "$(gofumpt -l -extra .)"
+#      - name: Lint
+#        run: |
+#          go vet -stdmethods=false $(go list ./...)
+#          go install mvdan.cc/gofumpt@v0.2.0
+#          test -z "$(gofumpt -l -extra .)"
