--- a/.github/workflows/invalid_questions.yml
+++ b/.github/workflows/invalid_questions.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Close Stale Issues
         uses: actions/stale@v6
         with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           stale-issue-message: "This issue has been marked as invalid question, please give more information by following the `Question` template, if you believe there is a bug of Hertz, please create a pull request that could reproduce the issue on [https://github.com/go-gorm/playground](https://github.com/go-gorm/playground), the issue will be closed in 30 days if no further activity occurs. most likely your question already answered https://github.com/go-gorm/gorm/issues or described in the document https://gorm.io ✨ [Search Before Asking](https://stackoverflow.com/help/how-to-ask) ✨"
           stale-issue-label: "status:stale"
           days-before-stale: 0
