ci: add invalid test

--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -14,7 +14,7 @@ on:
       - labeled
 jobs:
   add-comment:
-    if: github.event.label.name == 'WaitingForInfo'
+    if: github.event.label.name == 'invalid'
     runs-on: ubuntu-latest
     permissions:
       issues: write
