--- a/.github/workflows/lable.yml
+++ b/.github/workflows/lable.yml
@@ -24,3 +24,15 @@ jobs:
         with:
           add-labels: "invalid"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+  add-comment:
+    runs-on: ubuntu-latest
+    permissions:
+      issues: write
+    steps:
+      - name: Add comment
+        uses: peter-evans/create-or-update-comment@a35cf36e5301d70b76f316e867e7788a55a31dae
+        with:
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            This issue is available for anyone to work on. **Make sure to reference this issue in your pull request.** :sparkles: Thank you for your contribution! :sparkles:
