--- a/.github/workflows/invalid.yml
+++ b/.github/workflows/invalid.yml
@@ -1,7 +1,7 @@
 name: "Close invalid questions issues"
 on:
   schedule:
-    - cron: "*/10 * * * *"
+    - cron: "*/1 * * * *"
 
 permissions:
   contents: read
@@ -24,4 +24,4 @@ jobs:
           days-before-stale: 0
           days-before-close: 30
           remove-stale-when-updated: true
-          only-labels: "type:invalid question"
+          only-labels: "invalid issue"
