--- a/.github/workflows/invalid.yml
+++ b/.github/workflows/invalid.yml
@@ -19,8 +19,8 @@ jobs:
         uses: actions/stale@v6
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-issue-message: "This issue has been marked as invalid question, please give more information by following the `Question` template, if you believe there is a bug of GORM, please create a pull request that could reproduce the issue on [https://github.com/go-gorm/playground](https://github.com/go-gorm/playground), the issue will be closed in 30 days if no further activity occurs. most likely your question already answered https://github.com/go-gorm/gorm/issues or described in the document https://gorm.io ✨ [Search Before Asking](https://stackoverflow.com/help/how-to-ask) ✨"
-          stale-issue-label: "status:stale"
+          stale-issue-message: "This issue has been marked as invalid question, please give more information by following the `issue` template. The issue will be closed in 30 days if no further activity occurs."
+          stale-issue-label: "stale"
           days-before-stale: 0
           days-before-close: 30
           remove-stale-when-updated: true
