--- a/.github/workflows/invalid.yml
+++ b/.github/workflows/invalid.yml
@@ -1,7 +1,7 @@
 name: "Close invalid questions issues"
 on:
   schedule:
-    - cron: "*/10 * * * *"
+    - cron: "36 * * * *"
 
 permissions:
   contents: read
