--- a/.github/workflows/invalid.yml
+++ b/.github/workflows/invalid.yml
@@ -1,7 +1,7 @@
 name: "Close Invalid Issue"
 on:
   schedule:
-    - cron: "*/10 * * * *"
+    - cron: "*/6 * * * *"
 
 permissions:
   contents: read
@@ -23,4 +23,4 @@ jobs:
           days-before-stale: 0
           days-before-close: 30
           remove-stale-when-updated: true
-          only-labels: "invalid issue,stale"
+          only-labels: "invalid issue"
