--- a/.github/workflows/labelers.yml
+++ b/.github/workflows/labelers.yml
@@ -12,6 +12,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: labeler
-        uses: Resnovas/label-mastermind@2.1.3
+        uses: Resnovas/label-mastermind@1.4.0-alpha.5
         with:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
