--- a/.github/workflows/labelers.yml
+++ b/.github/workflows/labelers.yml
@@ -12,6 +12,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: labeler
-        uses: Resnovas/label-mastermind@1.4.0-alpha.5
+        uses: jbinda/super-labeler-action@develop
         with:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
